--- a/src/pages/treasure/style/variable.less
+++ b/src/pages/treasure/style/variable.less
@@ -2,4 +2,50 @@
  * 定义常用的 less 变量和函数
  */
 
- 
+@primary-color: #334982;  // 主题蓝
+@secondary-color: #F74213; // 副色橙
+@ornament-color: #F5A623; // 点缀黄
+
+@background-color: #F5F5F5; // 背景灰
+@background-red-color: #FFF3F3; // 背景浅红
+@text-color: #081426; // 字体色
+@text-light-color: #979797; // 浅字体
+@border-color: #979797; // 边框灰
+
+ // 设计稿尺寸
+@designWidth: 360;
+// 计算自适应尺寸
+.vpx(@px) {
+  @result: unit(100 / @designWidth * @px, vw);
+}
+.h(@px) {
+  height: unit(100 / @designWidth * @px, vw);
+}
+
+.clearfix {
+  &::after {
+    display: block;
+    content: "";
+    clear: both;
+    visibility: hidden;
+  }
+}
+
+ // 固定尺寸比
+.box(@width, @height) {
+  position: relative;
+  &::before {
+    display: block;
+    content: "";
+    float: left;
+    width: 0;
+    height: 0;
+    padding-bottom: percentage(@height / @width);
+  }
+}
+
+.block() {
+  position: relative;
+
+}
+
