--- a/src/style/variable.less
+++ b/src/style/variable.less
@@ -1,7 +1,7 @@
 /**
  * 定义常用的 less 变量和函数
  */
-@plugin './less.plugin';
+// @plugin './less.plugin';
 
 @primary-color: #334982;  // 主题蓝
 @secondary-color: #F74213; // 副色橙
