--- a/src/style/variable.less
+++ b/src/style/variable.less
@@ -35,6 +35,25 @@
   }
 }
 
+.border1px() {
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    left: 0;
+    bottom: 0;
+    background-color: @background-color;
+    @media screen and (min-device-pixel-ratio:2) {
+      transform: scaleY(0.5);
+    }
+    @media screen and (min-device-pixel-ratio:3) {
+      transform: scaleY(1/3);
+    }
+  }
+}
+
 .bgImg(@path) {
   background-image: url('{@path}1x.png');
   @media screen and (min-device-pixel-ratio:2) {
