--- a/src/style/global.less
+++ b/src/style/global.less
@@ -11,3 +11,11 @@ body {
   background-color: @background-color;
   color: @text-color;
 }
+
+a {
+  text-decoration: none;
+  color: @secondary-color;
+  &:hover, &:active {
+    background:none;
+  }
+}
