--- a/src/style/variable.less
+++ b/src/style/variable.less
@@ -35,15 +35,21 @@
   }
 }
 
-.border1px() {
+.border1px(@position:bottom) {
   position: relative;
   &::after {
     content: '';
     position: absolute;
     width: 100%;
     height: 1px;
-    left: 0;
-    bottom: 0;
+    & when (@position=bottom) {
+      left: 0;
+      bottom: 0;
+    }
+    & when (@position=top) {
+      left: 0;
+      top: 0;
+    }
     background-color: @background-color;
     @media screen and (min-device-pixel-ratio:2) {
       transform: scaleY(0.5);
