--- a/src/style/mint-theme.less
+++ b/src/style/mint-theme.less
@@ -14,7 +14,7 @@
 }
 
 .mint-button--plain {
-  background-color: #ffffff;
+  background-color: transparent;
   color: @secondary-color;
   border: 1px solid @secondary-color;
   &::after {
@@ -34,3 +34,8 @@
 .mint-button {
   font-size: 16px;
 }
+
+// .mint-indicator-mask {
+//   background: rgba(0,0,0,.2);
+//   opacity: .8;
+// }
