--- a/src/style/global.less
+++ b/src/style/global.less
@@ -5,6 +5,13 @@
 
 html, body {
   width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#app {
+  height: 100%;
+  overflow-y: auto;
 }
 
 body {
