--- a/src/style/mint-theme.less
+++ b/src/style/mint-theme.less
@@ -11,14 +11,21 @@
 .mint-button--default {
   background-color: @secondary-color;
   color: #ffffff;
+  &.is-plain {
+    background-color: #ffffff;
+    border: 1px solid @secondary-color;
+    color: @secondary-color;
+  }
 }
 
-.mint-button--plain {
-  background-color: transparent;
-  color: @secondary-color;
-  border: 1px solid @secondary-color;
-  &::after {
+.mint-button--warning {
+  background-color: @ornament-color;
+  border: 1px solid @ornament-color;
+  color: #ffffff;
+  &.is-plain {
     background-color: #ffffff;
+    border: 1px solid @ornament-color;
+    color: @ornament-color;
   }
 }
 
