--- a/template/index.html
+++ b/template/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <title>智慧积分</title>
+    <head>
+      <script id="locizify" projectid="0046e0cc-190b-4e35-b57e-af6a4772e4ab" debug="false" apikey="07a3c37b-1bf0-4d7c-beff-5d4514e5fb22" saveMissing="true" referencelng="zh" fallbacklng="zh" src="https://unpkg.com/locizify@^2.0.0"></script>
+    </head>
   </head>
   <body>
     <noscript>
